# usansred

./: .gitmodules  .grype.yaml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  README.md  codecov.yaml  environment.yml  pyproject.toml
.agents/skills/pixi-python/: SKILL.md
.agents/skills/review-comment-audit-report/: SKILL.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/skills/pixi-python/: SKILL.md
.claude/skills/review-comment-audit-report/: SKILL.md
.codex/agents/: code-reviewer.toml
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  dev_sync.yml  package.yml  test_and_deploy.yml  testing.yml  unittest.yml  update-lockfiles.yml
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.rst
docs/source/: reference.rst  release_notes.rst  releases.rst
docs/source/api/: usansred.rst
docs/source/developer/: contributing.rst  developer.rst
docs/source/user/: conda_environments.rst  environments.rst  reduce.rst
scripts/: generate_schema.py
src/usansred/: enums.py  model.py  reduce.py  reduce_USANS.py  summary.py  transmission.py  utils.py
src/usansred/io/: __init__.py  read.py  save.py  usansred.json
src/usansred/models/: __init__.py  data.py  reduction_config.py
src/usansred/utils/: __init__.py  logging.py
tests/: conftest.py  test_fixtures.py  test_version.py
tests/data/: README.md  config-with-empty-cell.json  config.json  example-config-no-bg.json  example-config.csv  example-config.json
tests/integration/: test_classes.py  test_reduce.py
tests/unit/: test_combined_sample.py  test_experiment.py  test_io.py  test_model.py  test_sample.py  test_scan.py  test_summary.py
tests/unit/io/: test_read.py  test_save.py
tests/unit/utils/: test_logging.py
tests/usansred/: test_reduce.py
