[project]
name = "usansred"
description = "Reduction backend for USANS"
authors = [
  { name = "Yingrui Shang" },
  { name = "Jose Borreguerro" },
  { name = "Glass Elsarboukh" },
]
dynamic = ["version"]
requires-python = ">=3.11"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/neutrons/usansred/"

[project.scripts]
reduceUSANS = "usansred.reduce:main"

#####################################
#  BUILDING FROM SOURCES WITH HATCH
#####################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "versioningit"]

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.hooks.versioningit-onbuild]
source-file = "src/usansred/_version.py"
build-file = "usansred/_version.py"

[tool.hatch.build]
artifacts = [
  "reduction/usansred/_version.py",
  "reduction/usansred/**/*.yml",
  "reduction/usansred/**/*.yaml",
  "reduction/usansred/**/*.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["src/usansred"]

#################
#  VERSIONINGIT
#################

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}"
distance-dirty = "{next_version}.dev{distance}"

[tool.versioningit.write]
file = "src/usansred/_version.py"

[tool.pytest.ini_options]
pythonpath = [".", "src", "scripts"]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [
  ".git",
  "tmp*",
  "_tmp*",
  "__pycache__",
  "*dataset*",
  "*data_set*",
]
markers = [
  "datarepo: using repository usansred-data",
  "sns_mounted: requires the /SNS filesystem",
]

[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules/
lint.select = ["A", "ARG", "BLE", "E", "F", "I", "PT"]
lint.ignore = [
  "F403",
  "F405",
  "F401", # wild imports and  unknown names
]

###################
### Pixi config ###
###################

[tool.pixi.workspace]
name = "usansred"
preview = ["pixi-build"]
platforms = ["linux-64"]
channels = [
  "conda-forge",
  "mantid/label/main",
  "neutrons",
  "https://prefix.dev/pixi-build-backends"
]

[tool.pixi.environments]
default = { features = [
  "test",
  "package",
  "docs",
  "developer",
], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }

[tool.pixi.pypi-dependencies]
usansred = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "=3.11"
mantidworkbench = ">=6.15.0,<7"
pandas = ">=3.0.1,<4"
pydantic = ">=2.12.5,<3"
xlsxwriter = ">=3.2.9,<4"
finddata = { version = ">=0.13.0,<0.14", channel = "neutrons" }

# Conda packages (no PyPi) to be enumerated within the conda package to be built.
[tool.pixi.package.run-dependencies]
python = "=3.11"
mantidworkbench = ">=6.15.0,<6.16.0"
pandas = "*"
pydantic = "*"
xlsxwriter = "*"
finddata = { version = "=0.10.1", channel = "neutrons" }

[tool.pixi.package]
name = "usansred"
version = "1.0.0" # placeholder, overwritten by sync-version

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.4.*"}

[tool.pixi.tasks]
# Documentation
build-docs = { cmd = 'sphinx-build -b html docs docs/_build', description = "Build documentation" }
test-docs = { cmd = "sphinx-build -M doctest docs docs/_build", description = "Test building the documentation" }
# Testing
test = { description = "Run the test suite", cmd = "pytest" }
unit-test = { description = "Run the unit tests", cmd = "python -m pytest -vv -m \"not datarepo and not sns_mounted\" --cov=src --cov-report=xml --cov-report=term-missing tests/ && mv .coverage .coverage.unit" }
integration-test = { description = "Run the integration tests", cmd = "git submodule update --init && python -m pytest -vv -m \"datarepo\" --cov=src --cov-report=xml  --cov-report=term-missing tests/ && mv .coverage .coverage.integration" }
# Packaging
pypi-build = { cmd = "hatch build", description = "Build the package for PyPI" }
conda-build-command = { cmd = "pixi build", description = "Build the conda package command" }
conda-build = { description = "Build the conda package", depends-on = [
  "backup-toml",
  "sync-version",
  "conda-build-command",
  "reset-toml",
] }
conda-publish = { cmd = "anaconda upload *.conda", description = "Publish the .conda package to anaconda.org", depends-on = [
  "conda-build",
] }
# Misc
audit-deps = { cmd = "pip-audit --local -s osv", description = "Audit the package dependencies for vulnerabilities" }
clean = { cmd = 'rm -rf .pytest_cache .ruff_cache **/*.egg-info **/dist **/__pycache__', description = "Clean up various caches and build artifacts" }
clean-conda = { cmd = "rm -f *.conda", description = "Clean the local .conda build artifacts" }
clean-docs = { cmd = "rm -rf docs/_build", description = "Clean up documentation build artifacts" }
clean-pypi = { cmd = "rm -rf dist", description = "Clean the PyPI build artifacts" }
clean-all = { description = "Clean all artifacts", depends-on = [
  "clean",
  "clean-conda",
  "clean-docs",
  "clean-pypi",
] }
combine-coverage = { description = "Combine coverage reports", cmd = "coverage combine" }
sync-version = { cmd = 'version=$(python -m versioningit); toml set tool.pixi.package.version "$version" --toml-path pyproject.toml', description = "Sync pyproject.toml version with Git version" }
backup-toml = { cmd = "cp pyproject.toml pyproject.toml.bak", description = "Backup the pyproject.toml file" }
reset-toml = { cmd = "cp pyproject.toml.bak pyproject.toml; rm pyproject.toml.bak", description = "Reset the pyproject.toml file to the original state" }

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0.0,<8"
pytest-repeat = ">=0.9.4,<0.10"
pytest-xdist = ">=3.8.0,<4"

[tool.pixi.feature.package.dependencies]
anaconda-client = ">=1.14.1,<2"
twine = ">=6.2.0,<7"
versioningit = ">=3.3.0,<4"
hatch = ">=1.16.5,<2"
python-build = ">=1.4.0,<2"

[tool.pixi.feature.package.pypi-dependencies]
toml-cli = ">=0.8.2, <0.9"

[tool.pixi.feature.developer.dependencies]
pip = ">=26.0.1,<27"
pip-audit = ">=2.10.0,<3"
pre-commit = ">=4.5.1,<5"
ruff = ">=0.15.5,<0.16"
versioningit = ">=3.3.0,<4"
argcomplete = ">=3.6.3,<4"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.2.3,<9"
sphinx_rtd_theme = ">=3.1.0,<4"

[tool.pixi.package.host-dependencies]
hatchling = "*"
versioningit = "*"

# Add additional 3rd party tool configuration here as needed
